Gradually de-hackifying script scope

--- a/test/integration/script-template relationship/expected_output/embedded-script.html
+++ b/test/integration/script-template relationship/expected_output/embedded-script.html
@@ -3,6 +3,10 @@ script local var:
 not passed from script
 </p>
 <p>
+script ivar:
+not passed from script
+</p>
+<p>
 prop from script:
 &quot;hello&quot;
 </p>
