CSS nesting now handles full HTML doc

--- a/test/integration/style attachments/expected_output/subfolder/isolation-css-nesting.html
+++ b/test/integration/style attachments/expected_output/subfolder/isolation-css-nesting.html
@@ -1,2 +1,17 @@
-<span class="【Superfluous::Presentation::Renderer::StyleAttachment|style|subfolder/isolation-css-nesting.html】"><p>Howdy!</p>
-</span>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Exciting page</title>
+</head>
+<body><span class="【Superfluous::Presentation::Renderer::StyleAttachment|style|subfolder/isolation-css-nesting.html】">
+Some greetings with Y in them:
+<ul>
+<li><span class="【Superfluous::Presentation::Renderer::StyleAttachment|style|subfolder/_css-nesting-partial】"><b>Ahoy</b>
+</span></li>
+<li><span class="【Superfluous::Presentation::Renderer::StyleAttachment|style|subfolder/_css-nesting-partial】"><b>Howdy</b>
+</span></li>
+<li><span class="【Superfluous::Presentation::Renderer::StyleAttachment|style|subfolder/_css-nesting-partial】"><b>Yo</b>
+</span></li>
+</ul>
+</span></body>
+</html>
