Switch css isolation from span to div with `display: contents`

--- a/test/integration/style attachments/expected_output/subfolder/isolation-css-nesting.html
+++ b/test/integration/style attachments/expected_output/subfolder/isolation-css-nesting.html
@@ -3,15 +3,15 @@
 <head>
 <title>Exciting page</title>
 </head>
-<body><span class="【Superfluous::Presentation::Renderer::StyleAttachment|style|subfolder/isolation-css-nesting.html】">
+<body><div class="【Superfluous::Presentation::Renderer::StyleAttachment|style|subfolder/isolation-css-nesting.html】">
 Some greetings with Y in them:
 <ul>
-<li><span class="【Superfluous::Presentation::Renderer::StyleAttachment|style|subfolder/_css-nesting-partial】"><b>Ahoy</b>
-</span></li>
-<li><span class="【Superfluous::Presentation::Renderer::StyleAttachment|style|subfolder/_css-nesting-partial】"><b>Howdy</b>
-</span></li>
-<li><span class="【Superfluous::Presentation::Renderer::StyleAttachment|style|subfolder/_css-nesting-partial】"><b>Yo</b>
-</span></li>
+<li><div class="【Superfluous::Presentation::Renderer::StyleAttachment|style|subfolder/_css-nesting-partial】"><b>Ahoy</b>
+</div></li>
+<li><div class="【Superfluous::Presentation::Renderer::StyleAttachment|style|subfolder/_css-nesting-partial】"><b>Howdy</b>
+</div></li>
+<li><div class="【Superfluous::Presentation::Renderer::StyleAttachment|style|subfolder/_css-nesting-partial】"><b>Yo</b>
+</div></li>
 </ul>
-</span></body>
+</div></body>
 </html>
